--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hospital",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -23,11 +25,14 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "flash": "^1.1.0",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "popups": "^1.1.3",
     "random-token": "^0.0.8",
