--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "popups": "^1.1.3",
     "random-token": "^0.0.8",
     "socket.io": "^4.8.0",
-    "sweetalert2": "^11.14.4"
+    "sweetalert2": "^11.14.4",
+    "url": "^0.11.4"
   }
 }
