--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "nunjucks": "^3.2.4",
     "path": "^0.12.7",
     "popups": "^1.1.3",
     "random-token": "^0.0.8",
